--- a/index.html
+++ b/index.html
@@ -101,6 +101,18 @@
     </section>
     <!-- Image Slider End -->
     
+    <section class="container text-center my-5 d-none d-lg-block">
+      <p class="h1">Trusted by over 800+ companies</p>
+      <div class="mt-4 d-flex justify-content-center">
+        <img src="images/company/company-1.png" alt="" class="mx-5">
+        <img src="images/company/company-2.png" alt="" class="mx-5">
+        <img src="images/company/company-3.png" alt="" class="mx-5">
+        <img src="images/company/company-4.png" alt="" class="mx-5">
+        <img src="images/company/company-5.png" alt="" class="mx-5">
+        <img src="images/company/company-6.png" alt="" class="mx-5">
+      </div>
+    </section>
+
     <!-- Footer Section -->
 
     <footer class="bg-dark text-center text-light">
