--- a/index.html
+++ b/index.html
@@ -105,9 +105,108 @@
     <section class="container">
       <div class="my-4">
         <p class="h1 text-center">Discover Our Popular Courses</p>
-        <p class="h5 text-center">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        <p class="text-center">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
       </div>
-      
+      <div class="container text-center">
+        <div class="row row-cols-1 row-cols-lg-2 g-1 g-lg-2">
+          <div class="col">
+            <div class="border d-flex pe-5">
+              <div class="col-4">
+                <img src="images/course/course-1.png" alt="" class="image-fluid">
+              </div>
+              <div class="col-8 ps-5">
+                <h3>
+                  Fundamental Of UI/UX Design
+                </h1>
+                <p>
+                  Some quick example text to build on the card title and make up the bulk of the card.
+                </p>
+                <p class="text-info">Price : 20$</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="border d-flex pe-5">
+              <div class="col-4">
+                <img src="images/course/course-2.png" alt="" class="image-fluid">
+              </div>
+              <div class="col-8 ps-5">
+                <h3>
+                  Javascript Basic to advanced
+                </h1>
+                <p>
+                  Some quick example text to build on the card title and make up the bulk of the card.
+                </p>
+                <p class="text-info">Price : 20$</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="border d-flex pe-5">
+              <div class="col-4">
+                <img src="images/course/course-3.png" alt="" class="image-fluid">
+              </div>
+              <div class="col-8 ps-5">
+                <h3>
+                  Fullstack Web Development
+                </h1>
+                <p>
+                  Some quick example text to build on the card title and make up the bulk of the card.
+                </p>
+                <p class="text-info">Price : 20$</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="border d-flex pe-5">
+              <div class="col-4">
+                <img src="images/course/course-4.png" alt="" class="image-fluid">
+              </div>
+              <div class="col-8 ps-5">
+                <h3>
+                  Digital Marketing
+                </h1>
+                <p>
+                  Some quick example text to build on the card title and make up the bulk of the card.
+                </p>
+                <p class="text-info">Price : 20$</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="border d-flex pe-5">
+              <div class="col-4">
+                <img src="images/course/course-5.png" alt="" class="image-fluid">
+              </div>
+              <div class="col-8 ps-5">
+                <h3>
+                  Photography Basic Rules
+                </h1>
+                <p>
+                  Some quick example text to build on the card title and make up the bulk of the card.
+                </p>
+                <p class="text-info">Price : 20$</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="border d-flex pe-5">
+              <div class="col-4">
+                <img src="images/course/course-6.png" alt="" class="image-fluid">
+              </div>
+              <div class="col-8 ps-5">
+                <h3>
+                  Motion Graphics
+                </h1>
+                <p>
+                  Some quick example text to build on the card title and make up the bulk of the card.
+                </p>
+                <p class="text-info">Price : 20$</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <!-- Course Section End -->
 
