--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
        .darken-image{
         filter: brightness(50%);
        }
+      
     </style>
 
   </head>
@@ -107,14 +108,14 @@
         <p class="h1 text-center">Discover Our Popular Courses</p>
         <p class="text-center">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
       </div>
-      <div class="container text-center">
-        <div class="row row-cols-1 row-cols-lg-2 g-1 g-lg-2">
+      <div class="container">
+        <div class="row row-cols-1 row-cols-md-1 row-cols-lg-2 g-2 g-lg-3">
           <div class="col">
-            <div class="border d-flex pe-5">
-              <div class="col-4">
-                <img src="images/course/course-1.png" alt="" class="image-fluid">
+            <div class="border d-flex flex-column flex-md-row flex-lg-row">
+              <div class="col-sm-12 col-md-4 col-lg-4">
+                <img src="images/course/course-1.png" class="img-fluid w-100" alt="">
               </div>
-              <div class="col-8 ps-5">
+              <div class="col-sm-12 col-md-8 col-lg-8 px-5 d-flex flex-column justify-content-center">
                 <h3>
                   Fundamental Of UI/UX Design
                 </h1>
@@ -126,11 +127,11 @@
             </div>
           </div>
           <div class="col">
-            <div class="border d-flex pe-5">
-              <div class="col-4">
-                <img src="images/course/course-2.png" alt="" class="image-fluid">
+            <div class="border d-flex flex-column flex-md-row flex-lg-row">
+              <div class="col-sm-12 col-md-4 col-lg-4">
+                <img src="images/course/course-2.png" alt="" class="image-fluid w-100">
               </div>
-              <div class="col-8 ps-5">
+              <div class="col-sm-12 col-md-8 col-lg-8 px-5 d-flex flex-column justify-content-center">
                 <h3>
                   Javascript Basic to advanced
                 </h1>
@@ -142,11 +143,11 @@
             </div>
           </div>
           <div class="col">
-            <div class="border d-flex pe-5">
-              <div class="col-4">
-                <img src="images/course/course-3.png" alt="" class="image-fluid">
+            <div class="border d-flex flex-column flex-md-row flex-lg-row">
+              <div class="col-sm-12 col-md-4 col-lg-4">
+                <img src="images/course/course-3.png" alt="" class="image-fluid w-100">
               </div>
-              <div class="col-8 ps-5">
+              <div class="col-sm-12 col-md-8 col-lg-8 px-5 d-flex flex-column justify-content-center">
                 <h3>
                   Fullstack Web Development
                 </h1>
@@ -158,11 +159,11 @@
             </div>
           </div>
           <div class="col">
-            <div class="border d-flex pe-5">
-              <div class="col-4">
-                <img src="images/course/course-4.png" alt="" class="image-fluid">
+            <div class="border d-flex flex-column flex-md-row flex-lg-row">
+              <div class="col-sm-12 col-md-4 col-lg-4">
+                <img src="images/course/course-4.png" alt="" class="image-fluid w-100">
               </div>
-              <div class="col-8 ps-5">
+              <div class="col-sm-12 col-md-8 col-lg-8 px-5 d-flex flex-column justify-content-center">
                 <h3>
                   Digital Marketing
                 </h1>
@@ -174,11 +175,11 @@
             </div>
           </div>
           <div class="col">
-            <div class="border d-flex pe-5">
-              <div class="col-4">
-                <img src="images/course/course-5.png" alt="" class="image-fluid">
+            <div class="border d-flex flex-column flex-md-row flex-lg-row">
+              <div class="col-sm-12 col-md-4 col-lg-4">
+                <img src="images/course/course-5.png" alt="" class="image-fluid w-100">
               </div>
-              <div class="col-8 ps-5">
+              <div class="col-sm-12 col-md-8 col-lg-8 px-5 d-flex flex-column justify-content-center">
                 <h3>
                   Photography Basic Rules
                 </h1>
@@ -190,11 +191,11 @@
             </div>
           </div>
           <div class="col">
-            <div class="border d-flex pe-5">
-              <div class="col-4">
-                <img src="images/course/course-6.png" alt="" class="image-fluid">
+            <div class="border d-flex flex-column flex-md-row flex-lg-row">
+              <div class="col-sm-12 col-md-4 col-lg-4">
+                <img src="images/course/course-6.png" alt="" class="image-fluid w-100">
               </div>
-              <div class="col-8 ps-5">
+              <div class="col-sm-12 col-md-8 col-lg-8 px-5 d-flex flex-column justify-content-center">
                 <h3>
                   Motion Graphics
                 </h1>
@@ -226,7 +227,7 @@
 
     <!-- Accordion -->
     
-    <section class="container mt-5">
+    <section class="container mt-5 mb-3">
       <p class="h1 text-center my-3">Frequently Asked Questions</p>
       <p class="text-center mb-5">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
 
